scrollbar + fixes

--- a/wiki/src/css/DryLabPage.css
+++ b/wiki/src/css/DryLabPage.css
@@ -13,6 +13,9 @@
     width:100%;
     height:450px;
   }
+.content{
+    padding: 2em;
+}
 /* ol.a {
     list-style-position: outside;
     padding-left: 50;
